--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -30,14 +30,15 @@ select.dropdown {
     float: right;
 }
 
+#question-list {
+    margin-bottom: 4.375rem;
+}
 #footer {
    position:fixed;
    left:0;
-   bottom:0;
-  
+   bottom:0; 
    width:100%;
 }
-
 
 .content {
     padding-left: 20px;
@@ -48,6 +49,10 @@ select.dropdown {
     padding-top: 10px;
 }
 
+.radio-inline {
+    padding-right: 10px;
+    display: inline;
+}
 .category {
     padding-left: 10px;
     font-weight: bold;
@@ -90,6 +95,13 @@ select.dropdown {
 
 .checkmark-icon {
     background: url("/img/checkmark.svg") no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+}
+
+.refresh-icon {
+    background: url("/img/refresh.svg") no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
